@@ -1,7 +1,7 @@
 /*
  * The Apache Software License, Version 1.1
  *
- * Copyright (c) 2000 The Apache Software Foundation.  All rights
+ * Copyright (c) 2001 The Apache Software Foundation.  All rights
  * reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -52,56 +52,10 @@
  * <http://www.apache.org/>.
  */
 
-package org.apache.tools.ant.taskdefs;
+package org.example.types;
 
-import org.apache.tools.ant.Project;
+import org.apache.tools.ant.ProjectComponent;
 
-/**
- * @author Nico Seessle <nico@seessle.de> 
- */
-public class TaskdefTest extends TaskdefsTest { 
-    
-    public TaskdefTest(String name) { 
-        super(name);
-    }    
-    
-    public void setUp() { 
-        configureProject("src/etc/testcases/taskdefs/taskdef.xml");
-    }
-    
-    public void test1() { 
-        expectBuildException("test1", "required argument not specified");
-    }
-
-    public void test2() { 
-        expectBuildException("test2", "required argument not specified");
-    }
-
-    public void test3() { 
-        expectBuildException("test3", "required argument not specified");
-    }
-
-    public void test4() { 
-        expectBuildException("test4", "classname specified doesn't exist");
-    }
-
-    public void test5() { 
-        expectBuildException("test5", "No public execute() in " + Project.class);
-    }
-
-    public void test5a() { 
-        executeTarget("test5a");
-    }
-
-    public void test6() {
-        expectLog("test6", "simpletask: worked");
-    }
-
-    public void test7() {
-        expectLog("test7", "worked");
-    }
-
-    public void testGlobal() {
-        expectLog("testGlobal", "worked");
-    }
+public class TypedefTestType extends ProjectComponent {
 }
+
